# service/PuntosOrdenDelDiaService.js
@@ -94,3 +94,40 @@ exports.puntos_orden_del_diaPOST = function(body) {
   });
 }
 
+/**
+ * Obtener documentos de un punto del día por ID del punto
+ *
+ * id Integer 
+ * returns ResponseDocumentos
+ **/
+exports.puntos_orden_del_diaIdDocumentosGET = function(id) {
+  return new Promise(function(resolve, reject) {
+    extraService.get(null, null, `SELECT * FROM u438573835_censo.ffsj_plenos_informacion_punto_del_dia WHERE idPunto = ${id};`).then(res => {
+      if(res !== 0)
+        resolve(extraService.transformResponse(res, "puntosOrdenDelDia", true));
+      else
+        reject(utils.respondWithCode(404, extraService.transformResponse({codigo: 404, message: "No existe el punto " + id}, null, false)));
+    }).catch(res => {
+      reject(utils.respondWithCode(500, res));
+    });
+  });
+}
+
+/**
+ * Obtener votaciones de un punto del día por ID del punto
+ *
+ * id Integer 
+ * returns ResponseVotaciones
+ **/
+exports.puntos_orden_del_diaIdVotacionesGET = function(id) {
+  return new Promise(function(resolve, reject) {
+    extraService.get(null, null, `SELECT * FROM u438573835_censo.votaciones WHERE idPunto = ${id};`).then(res => {
+      if(res !== 0)
+        resolve(extraService.transformResponse(res, "puntosOrdenDelDia", true));
+      else
+        reject(utils.respondWithCode(404, extraService.transformResponse({codigo: 404, message: "No existe el punto " + id}, null, false)));
+    }).catch(res => {
+      reject(utils.respondWithCode(500, res));
+    });
+  });
+}
